--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ isoduration==20.11.0
 itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.2
 json5==0.12.1
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -140,6 +141,7 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rich==14.1.0
 rpds-py==0.27.1
+scikit-learn==1.7.2
 scipy==1.16.2
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -153,6 +155,7 @@ starlette==0.47.3
 statsmodels==0.14.5
 terminado==0.18.1
 text-unidecode==1.3
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 toml==0.10.2
 tornado==6.5.2
