--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appnope==0.1.4
 asttokens==3.0.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -8,6 +10,7 @@ decorator==5.2.1
 et_xmlfile==2.0.0
 executing==2.2.1
 fonttools==4.60.1
+idna==3.11
 ipykernel==7.1.0
 ipython==9.7.0
 ipython_pygments_lexers==1.1.1
@@ -36,6 +39,7 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
+requests==2.32.5
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
@@ -45,4 +49,5 @@ threadpoolctl==3.6.0
 tornado==6.5.2
 traitlets==5.14.3
 tzdata==2025.2
+urllib3==2.5.0
 wcwidth==0.2.14
